--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,16 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@decorators/*": ["./src/common/decorators/*"],
+      "@helpers/*":["./src/helpers/*"],
+      "@pipes/*": ["./src/common/pipes/*"],
+      "@auth/*": ["./src/modules/auth/*"],
+      "@order/*": ["./src/modules/order/*"],
+      "@products/*": ["./src/modules/products/*"],
+      "@users/*": ["./src/modules/users/*"],
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
